[metadata]
name = podcast_tool
version = 0.0.1
author = Henry Yu
author_email = hhstudio87@gmail.com
description = A python-based tool suite for podcast
long_description = file: README.md
long_description_content_type = text/markdown

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =

[options.packages.find]
where=src
